Resolve various layout issues with index template

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -14,9 +14,8 @@ html, body {
 }
 
 .searchcontainer {
-	width: 100%;
 	font-size: 16pt;
-	padding: .4em;
+	padding: .2em .4em .2em;
 	border-bottom: 1px solid #666;
 
 	    -ms-box-shadow:0px 0px 13px 8px #777;
@@ -38,8 +37,7 @@ html, body {
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3ca7ed', endColorstr='#3375c9',GradientType=0 ); /* IE6-9 */
 }
 
-.search { /* main search bar */
-	background-color: red;
+.search {
 	width: 100%;
 }
 
